laptop/kustomization/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laptop
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: laptop
  template:
    metadata:
      annotations:
        tailcar.rajsingh.info/inject: "true"
        tailcar.rajsingh.info/tailnet: keiretsu-labs-github
      labels:
        app.kubernetes.io/name: laptop
    spec:
      imagePullSecrets:
        - name: zot-pull-secret
      containers:
        - name: laptop
          image: oci.${CLUSTER_DOMAIN}/laptop/laptop:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: kubeconfig
              mountPath: /config/.kube
              readOnly: true
            - name: startup
              mountPath: /custom-cont-init.d
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: laptop-config
        - name: kubeconfig
          secret:
            secretName: laptop-kubeconfig
        - name: startup
          configMap:
            name: laptop-startup
            defaultMode: 0755
