laptop/kustomization/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: laptop
  annotations:
    item.homer.rajsingh.info/name: "Laptop"
    item.homer.rajsingh.info/subtitle: "Dev Environment"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/code-server.png"
    item.homer.rajsingh.info/keywords: "code, development, editor"
    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "laptop.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: laptop
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
